# signapple

./: .gitignore  .mypy.ini  LICENSE  README.md  codesign.py  pyproject.toml  setup.py
contrib/: generate-setup.sh
docs/: README.md  certificates.md  notarization.md  signature.md
signapple/: __init__.py  blobs.py  certs.py  dump.py  notarize.py  reqs.py  sign.py  utils.py  verify.py
tests/test-apps/MacOS/universal/Contents/MacOS/: signapple-test
tests/test-apps/MacOS/universal/unsigned/Contents/MacOS/: signapple-test
tests/test-apps/MacOS/x86/Contents/MacOS/: cd  ents  signapple-test
tests/test-apps/MacOS/x86/signed/Contents/: Info.plist
tests/test-apps/MacOS/x86/unsigned/Contents/MacOS/: signapple-test
