[tool.poetry]
name = "signapple"
version = "0.1.0"
description = "Signing and verification tool for MacOS code signatures"
authors = ["Andrew Chow <achow101-github@achow101.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
asn1crypto = "^1.4.0"
macholib = "^1.14"
oscrypto = "^1.2.1"
certvalidator = { git = "https://github.com/achow101/certvalidator.git", rev = "e5bdb4bfcaa09fa0af355eb8867d00dfeecba08c" }
requests = "^2.25.1"
elf-esteem = { git = "https://github.com/LRGH/elfesteem.git", rev = "87bbd79ab7e361004c98cc8601d4e5f029fd8bd5" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[tool.poetry.scripts]
signapple = "signapple:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
